hierarchy changes for demo
